# scrcpy-wrapper

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: main.rs
src/config/: conf.rs
src/i18n/: language.rs  mod.rs  translate.rs
src/ui/: button.rs  main.rs  mod.rs  style.rs
src/ui/components/: action_section.rs  audio.rs  component.rs  connect_method.rs  control.rs  exe_info.rs  mod.rs  others.rs  output.rs  performance.rs  video.rs  virtual_display.rs
src/util/: args.rs  mod.rs  path.rs
