[package]
name = "scrcpy-wrapper"
version = "0.1.1"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["tokio"] }
toml = "0.8.19"
serde = { version = "1.0.216", features = ["derive", "serde_derive"] }
sys-locale = "0.3.2"
once_cell = "1.20.2"
dark-light = "1.1.1"
async-std = "1.13.0"
shell-words = "1.1.0"
