[package]
name = "scrcpy-wrapper"
version = "0.1.3"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["tokio", "auto-detect-theme"] }
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
sys-locale = "0.3.2"
once_cell = "1.20.2"
shell-words = "1.1.0"
home = "0.5.11"
